# pokedata-api

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
commands/: Cargo.toml
commands/src/: cli.rs  commands.rs  main.rs
commands/src/commands/: hello.rs  pokeapi.rs
commands/src/commands/pokeapi/: build_sprites.rs  coverage.rs
configuration/: pokeapi_pokemon_sprites_index.json
libraries/entities/: Cargo.toml
libraries/entities/src/: api.rs  app_state.rs  data_structures.rs  debug_stats.rs  lib.rs  rankings.rs  search_indices.rs  total_stats.rs  traits.rs
libraries/parsing/: Cargo.toml
libraries/parsing/src/: csv.rs  csv_entity.rs  json.rs  lib.rs  pokemon_tcg.rs  traits.rs
libraries/utils/: Cargo.toml
libraries/utils/src/: constants.rs  directories.rs  filesystem.rs  lib.rs
sprite_indices/: README.md
src/: docs.rs  main.rs  models.rs  queries.rs  resources.rs
src/models/: bulk_response.rs  message_response.rs  type_effectiveness.rs
src/queries/: identifier.rs  ids.rs  type_effectiveness.rs
src/resources/: ability.rs  berry.rs  berry_firmness.rs  berry_flavor.rs  color.rs  debug_stats.rs  egg_group.rs  encounter.rs  encounter_condition.rs  encounter_condition_value.rs  encounter_method.rs  encounter_slot.rs  evolution.rs  evolution_chain.rs  evolution_trigger.rs  generation.rs  growth_rate.rs  habitat.rs  item.rs  item_category.rs  item_flag.rs  item_pocket.rs  language.rs  location.rs  location_area.rs  machine.rs  ping.rs  pokedex.rs  pokemon.rs  pokemon_move.rs  pokemon_move_ailment.rs  pokemon_move_category.rs  pokemon_move_damage_class.rs  pokemon_move_effect.rs  pokemon_move_flag.rs  pokemon_move_target.rs  pokemon_type.rs  pokemon_type_efficacy.rs  region.rs  shape.rs  (+7 more)
src/serde/: comma_seperated.rs
src/tests/: resources.rs
src/tests/resources/: ability.rs  berry.rs  berry_firmness.rs  berry_flavor.rs  color.rs  egg_group.rs  encounter.rs  encounter_condition.rs  encounter_condition_value.rs  encounter_method.rs  (+28 more)
types/: Cargo.toml
types/src/: app_state.rs  entities.rs  lib.rs
utils/: Cargo.toml
utils/src/: directories.rs  files.rs  filesystem.rs  lib.rs
(+260 files in other folders)
