[package]
name = "pokedata_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
bincode = "1.3.3"
pokedata_api_types = { path = "types" }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
bincode = "1.3.3"
pokedata_api_build = { path = "build" }
