[package]
name = "pokedata_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-test = "15.7.1"
bincode = "1.3.3"
cached = { version = "0.53.1", features = ["serde", "serde_json", "tokio", "async_tokio_rt_multi_thread", "async"] }
once_cell = "1.19.0"
pokedata_api_types = { path = "types" }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
utoipa = "4.2.3"
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }

[build-dependencies]
bincode = "1.3.3"
pokedata_api_build = { path = "build" }
pokedata_api_utils = { path = "utils" }
